add index modified + styles modified

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css" >
     </head>
 
     <body>
 
         <h1 id="title" class="page-title">
+            
             заголовок
         </h1>
-        <p>Параграф текста</p>
+        <p class="h1">
+            Параграф текста</p>
 
     </body>
 </html>
