--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             заголовок
         </h1>
         <p class="h1">
-            Параграф текста</p>
+            Параграф текста
+        текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст 
+        </p>
 
     </body>
 </html>
