--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
         <link rel="stylesheet" href="styles.css" >
     </head>
 
-    <body>
+    <body class="body">
 
-        <h1 id="title" class="page-title">
-            
-            заголовок
-        </h1>
-        <p class="h1">
-            Параграф текста
-        текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст 
-        </p>
+       <header class="page-header">
+            <div class="page-header__container">
+                <a href="#" class="page-header__container"></a>
+            </div>
+        ПРИВЕТ
+       </header>
+
+       <main class="main">
+        MAIN
+       </main> 
+
+       <footer class="page-footer">
+        FOOTER
+       </footer>
 
     </body>
 </html>
