shapka done, events done + chut chut grid

--- a/event.html
+++ b/event.html
@@ -57,11 +57,27 @@
        </header>
 
        <main class="main">
-        MAIN
+        <article>
+            <form class="reserve">
+                <div class="recerve__checkbox">
+                    checkbox
+                </div>
+                <div class="reserve__schemetable">
+                    Scheme
+                </div>
+                <div class="reserve__order">
+                    order
+                </div>
+                <div class="reserve__legend">
+                    legend
+                </div>
+            </form>
+        </article>
+    
        </main> 
 
        <footer class="page-footer">
-        FOOTER
+        
        </footer>
 
     </body>
