--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         
                 </a>
                 <nav class="page-header__nav">
-                    <a href="#" class="page-header__nav-link"> Мероприятия</a>
+                    <a href="C:\Users\PC\Desktop\Front-end\n1mEKA.github.io" class="page-header__nav-link"> Мероприятия</a>
                     <a href="#" class="page-header__nav-link"> Блог</a>
                     <a href="#" class="page-header__nav-link"> О нас</a>
                     <a href="#" class="page-header__nav-link"> Контакты</a>
