--- a/events.html
+++ b/events.html
@@ -85,80 +85,76 @@
                       <article class="event_card listing__event-card">
                         <a href="#" class="event-card__link">
                             <picture class="event-card__picture">
-                                <img class="event-card__img" src="assets/images/Nirvana.jpg" alt="Nirvana" />
+                                <img class="event-card__img" src="assets/images/HowStuffWorks.png" alt="HowStuffWorks" />
                             </picture>
                             <h4 class="event-card__title">
-                                Собираемся и слушаем альбом Nirvana. Nirvana
+                                Есть тема, нужно обсудить с HowStuffWorks
                             </h4>
                             <p class="event-card__text">
-                                Это третий альбом группы, выпущенный после смерти Курта Кобейна и первый, 
-                                содержащий студийный материал.
+                                Один из самых популярных подкастов в мире. В нём авторы объясняют, как устроены разные вещи.
                             </p>
-                            <time class="event-card__time" datatime="2022-12-07|18.00">07.12.2022 | начало 18.00</time>
+                            <time class="event-card__time" datatime="2022-12-14|18.30">14.12.2022 | начало 18.30</time>
                         </a>
                       </article>
 
                       <article class="event_card listing__event-card">
                         <a href="#" class="event-card__link">
                             <picture class="event-card__picture">
-                                <img class="event-card__img" src="assets/images/Nirvana.jpg" alt="Nirvana" />
+                                <img class="event-card__img" src="assets/images/Sade.png" alt="Sade" />
                             </picture>
                             <h4 class="event-card__title">
-                                Собираемся и слушаем альбом Nirvana. Nirvana
+                                Вечер | The Best of Sade
                             </h4>
                             <p class="event-card__text">
-                                Это третий альбом группы, выпущенный после смерти Курта Кобейна и первый, 
-                                содержащий студийный материал.
+                                Музыка группы имеет эклектичный характер, сочетая в себе элементы музыки соул, джаза,
+                                ритм-блюза и фанка.
                             </p>
-                            <time class="event-card__time" datatime="2022-12-07|18.00">07.12.2022 | начало 18.00</time>
+                            <time class="event-card__time" datatime="2022-12-16|20.00">16.12.2022 | начало 20.00</time>
                         </a>
                       </article> 
 
                       <article class="event_card listing__event-card">
                         <a href="#" class="event-card__link">
                             <picture class="event-card__picture">
-                                <img class="event-card__img" src="assets/images/Nirvana.jpg" alt="Nirvana" />
+                                <img class="event-card__img" src="assets/images/Malevich.png" alt="Malevich" />
                             </picture>
                             <h4 class="event-card__title">
-                                Собираемся и слушаем альбом Nirvana. Nirvana
+                                Выставка Малевича в Томске
                             </h4>
                             <p class="event-card__text">
-                                Это третий альбом группы, выпущенный после смерти Курта Кобейна и первый, 
-                                содержащий студийный материал.
+                                Это будет самая полная выставка с 1988 года, того времени, когда впервые заговорили о Малевиче. Экспозиция займёт два этажа павильона.
                             </p>
-                            <time class="event-card__time" datatime="2022-12-07|18.00">07.12.2022 | начало 18.00</time>
+                            <time class="event-card__time" datatime="2022-12-23|20.00">23.12.2022 | начало 20.00</time>
                         </a>
                       </article> 
 
                       <article class="event_card listing__event-card">
                         <a href="#" class="event-card__link">
                             <picture class="event-card__picture">
-                                <img class="event-card__img" src="assets/images/Nirvana.jpg" alt="Nirvana" />
+                                <img class="event-card__img" src="assets/images/ParaPeople.png" alt="ParaPeople" />
                             </picture>
                             <h4 class="event-card__title">
-                                Собираемся и слушаем альбом Nirvana. Nirvana
+                                Мастер — класс по студийной съемке от Tatler
                             </h4>
                             <p class="event-card__text">
-                                Это третий альбом группы, выпущенный после смерти Курта Кобейна и первый, 
-                                содержащий студийный материал.
+                                Фотографы издания расскажут, как им удается создавать потрясающие кадры и что может испортить весь процесс.
                             </p>
-                            <time class="event-card__time" datatime="2022-12-07|18.00">07.12.2022 | начало 18.00</time>
+                            <time class="event-card__time" datatime="2022-12-25|13.00">25.12.2022 | начало 13.00</time>
                         </a>
                       </article>
                       
                       <article class="event_card listing__event-card">
                         <a href="#" class="event-card__link">
                             <picture class="event-card__picture">
-                                <img class="event-card__img" src="assets/images/Nirvana.jpg" alt="Nirvana" />
+                                <img class="event-card__img" src="assets/images/the hatters.png" alt="the hatters" />
                             </picture>
                             <h4 class="event-card__title">
-                                Собираемся и слушаем альбом Nirvana. Nirvana
+                                Повесилимся на славу на концерте The Hatters
                             </h4>
                             <p class="event-card__text">
-                                Это третий альбом группы, выпущенный после смерти Курта Кобейна и первый, 
-                                содержащий студийный материал.
+                                Российская джипси-фолк-рок группа, основанная в 2016 году в Санкт-Петербурге. В основной состав группы входят Юрий Музыченко
                             </p>
-                            <time class="event-card__time" datatime="2022-12-07|18.00">07.12.2022 | начало 18.00</time>
+                            <time class="event-card__time" datatime="2022-12-27|10.00">27.12.2022 | начало 10.00</time>
                         </a>
                       </article> 
                     </div>
