--- a/src/html/blocks/head.html
+++ b/src/html/blocks/head.html
@@ -1,28 +1,9 @@
-<!-- <!DOCTYPE html>
-<html lang="ru">
-  @@include('blocks/head.html')
-  <body class="body">
-    @@include('blocks/page-header.html')
-    <main class="main">
-        <a href="#" class="page-header__logo">
-            <svg class="page-header__logo-icon" width="202" height="147">
-              <use xlink:href="assets/icons/symbols.svg#logo"></use>
-            </svg>
-          </a>
-    </main>
-    @@include('blocks/page-footer.html')
-  </body>
-</html> -->
-
-<!-- <head>
-  <link rel="stylesheet" href="styles/styles.min.css?ver=0">
-</head> -->
-
-
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Front-end</title>
   <link rel="stylesheet" href="styles/styles.min.css">
 </head>
