--- a/src/html/blocks/page-header.html
+++ b/src/html/blocks/page-header.html
@@ -4,7 +4,7 @@
       
       <a href="#" class="page-header__logo">
           <img
-          src="../assets/images/logo.svg" 
+          src="../assets/svg-sprite/logo.svg" 
           class="page-header__logo-icon" 
           alt="logo"
           /> 
