--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
 
        <main class="main">
             <div class="home">
-                @@include('blocks/blog-listing.html', {"class": "home_listing"})
+                <!-- @@include('blocks/blog-listing.html', {"class": "home_listing"}) -->
             </div>
        
        </main> 
