--- a/src/html/events.html
+++ b/src/html/events.html
@@ -78,7 +78,7 @@
        </main> 
 
         @@include('blocks/page-footer.html')
-        <!-- @@include('blocks/event-pp.html') -->
+        @@include('blocks/event-pp.html')
 
     </body>
 </html>
